--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "juuust-vue-icon",
+  "name": "meri-icon",
   "version": "0.1.4",
   "description": "Juuust Vue Icon, Automation workflow with Figma",
   "main": "bundle/index.common.js",
